# lightcontrol

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
src/lightcontrol/: __init__.py  gtk4.py
src/lightcontrol/ui/: __init__.py  win.ui.xml
tests/: test_lib.py  test_server.py  test_viewers.py
