[build-system]
requires = [
  "setuptools @ git+https://github.com/pypa/setuptools@experimental/support-pyproject",
  "wheel",
]

[project]
name = "lightcontrol"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["plot", "live", "realtime", "data"]
authors = [
  {name = "Greyson Christoforo", email = "grey@christoforo.net"}
]
maintainers = [
  {name = "Greyson Christoforo", email = "grey@christoforo.net"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dynamic = ['version']

dependencies = [
  "gi"
  "matplotlib"
]

[project.urls]
homepage = "https://github.com/greyltc/lightcontrol"
documentation = "https://github.com/greyltc/livechart/blob/master/README.md"
repository = "https://github.com/greyltc/lightcontrol.git"
changelog = "https://github.com/greyltc/lightcontrol/blob/master/CHANGELOG.md"

[project.scripts]
lightcontrol-srv = "lightcontrol.server:main"

[project.gui-scripts]
lightcontrol = "lightcontrol.gtk4:main"

[tool.setuptools.dynamic]
version = {attr = "lightcontrol.__version__"}

[tool.setuptools.package-data]
"*" = ["*.ui.xml"]

[tool.black]
line-length = 999999

# could format like this in case black isn't doing its job: `python -m yapf --recursive --in-place .`
#[tool.yapf]
#column_limit = 999999
